--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   flutter_svg: ^0.22.0
   flutter_feather_icons: ^2.0.0+1
   google_fonts: ^2.1.0
+  get: ^4.1.4
+  scroll_to_index: ^2.0.0
   flutter:
     sdk: flutter
 
@@ -51,6 +53,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - img/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
