--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   flutter_svg: ^0.22.0
   flutter_feather_icons: ^2.0.0+1
   google_fonts: ^2.1.0
+  menu_button: ^1.4.2+1
+  csc_picker: ^0.2.5
   get: ^4.1.4
   scroll_to_index: ^2.0.0
   flutter:
