--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,9 @@ dependencies:
   csc_picker: ^0.2.5
   get: ^4.1.4
   scroll_to_index: ^2.0.0
-  flutter_colorpicker: ^0.5.0
+  flutter_colorpicker: ^0.3.5
   dotted_border: ^2.0.0
+  provider: ^4.0.4
   flutter:
     sdk: flutter
 
@@ -79,7 +80,7 @@ flutter:
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+ #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
