--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   get: ^4.1.4
   scroll_to_index: ^2.0.0
   flutter_colorpicker: ^0.3.5
+  markdown_editable_textinput: ^2.0.0
+  flutter_markdown: ^0.6.2
+  video_player: ^2.1.6
   #video_player: ^2.1.6
   dotted_border: ^2.0.0
   provider: ^4.0.4
