--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   get: ^4.1.4
   scroll_to_index: ^2.0.0
   flutter_colorpicker: ^0.3.5
+  chewie:
   markdown_editable_textinput: ^2.0.0
   flutter_markdown: ^0.6.2
   video_player:
