--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  flick_video_player:
+
   auto_size_text: ^2.1.0
   flutter_feather_icons: ^2.0.0+1
   google_fonts: ^2.1.0
@@ -30,7 +30,7 @@ dependencies:
   get: ^4.1.4
   scroll_to_index: ^2.0.0
   flutter_colorpicker: ^0.3.5
-  chewie:
+  chewie: ^1.0.0
   markdown_editable_textinput: ^2.0.0
   flutter_markdown: ^0.6.2
   video_player:
