--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,13 @@ dependencies:
   get: ^4.1.4
   scroll_to_index: ^2.0.0
   flutter_colorpicker: ^0.3.5
-  chewie: ^1.0.0
   markdown_editable_textinput: ^2.0.0
   flutter_markdown: ^0.6.2
   video_player:
   #video_player: ^2.1.6
   dotted_border: ^2.0.0
   provider:
+  flick_video_player: ^0.3.0
   flutter:
     sdk: flutter
 
