--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,12 @@ dependencies:
   scroll_to_index: ^2.0.0
   flutter_colorpicker: ^0.3.5
   markdown_editable_textinput: ^2.0.0
-  flutter_markdown: ^0.6.2
   video_player:
   #video_player: ^2.1.6
   dotted_border: ^2.0.0
   provider:
   flick_video_player: ^0.3.0
+  markdowneditor: ^0.0.2
   flutter:
     sdk: flutter
 
